add image. add flex box logic. fix typewriter overflow

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 
 <body>
   <div class="flex-container centered">
+    <img class="image" src="http://www.htmldog.com/badge1.gif" width="200" height="200" alt="Html dog">
     <h2 id="typed"></h2>
-
     <button class="button" id="hi-btn" onclick="hiClicked()">Say Hi</button>
   </div>
 </body>
