add: self image asset

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div class="empty-flex"></div>
     <div class="content-flex">
 
-        <img class="image content-child" src="http://www.htmldog.com/badge1.gif" width="200" height="200" alt="Html dog">
+        <img class="image content-child" src="assets/self_image.jpg" alt="Self image">
         <h2 id="typed" class="content-child"></h2>
         <div class="social-flex content-child">
 
