--- a/public/index.html
+++ b/public/index.html
@@ -15,21 +15,31 @@
   <div class="top-level-flex">
     <div class="empty-flex"></div>
     <div class="content-column">
-        <div class="empty-flex"></div>
-        <div class="content-flex">
+      <div class="empty-flex"></div>
+      <div class="content-flex">
 
-          <img class="image content-child" src="assets/self_image.jpg" alt="Self image">
-          <h2 id="description" class="content-child" onload="populateDescription"></h2>
-          <div class="social-flex content-child">
-  
-                <img id="github" class="social-icon" src="assets/github.svg" title="Github">
-                <img id="linkedin" class="social-icon" src="assets/linkedin.svg" title="LinkedIn">
-                <img id="medium" class="social-icon" src="assets/medium.svg" title="Medium">
-                <img id="twitter" class="social-icon" src="assets/twitter.svg" title="Twitter">
+        <img class="image" src="assets/self_image.jpg" alt="Self image">
+        <p id="description" class="description" onload="populateDescription">
+          Yo! I am Saurabh Mishra, 
+          <br>
+          I currently spend my time working on mobile stuff (android) at
+          <br>
+          <span class="link" id="mm">Mutual Mobile</span>
+          <br>
+          Want to discuss interesting tech things, let's get in touch.
+        </p>
+        <div class="social-flex">
 
-            </div>
+          <img id="github" class="social-icon" src="assets/github.svg" title="Github">
+          <img id="linkedin" class="social-icon" src="assets/linkedin.svg" title="LinkedIn">
+          <img id="medium" class="social-icon" src="assets/medium.svg" title="Medium">
+          <img id="twitter" class="social-icon" src="assets/twitter.svg" title="Twitter">
+
+        </div>
       </div>
-        <div class="empty-flex"></div>
+      <div class="footnote-flex">
+        <p>Made with &#x1F49B by Saurabh Mishra</p>
+      </div>
 
     </div>
     <div class="empty-flex"></div>
