add: description text

--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,15 @@
       <div class="empty-flex"></div>
       <div class="content-flex">
 
-        <img class="image" src="assets/self_image.jpg" alt="Self image">
+        <img class="image" src="assets/self_image.webp" alt="Self image">
         <p id="description" class="description" onload="populateDescription">
-          Yo! I am Saurabh Mishra, 
+          Yo! I am a software developer with keen interest in architecting applications and writing clean-ish code.
+          I like solving problems and drawing patterns on screen (<span id="skia" class="link">Skia</span> is &#x1F49B)
           <br>
-          I currently spend my time working on mobile stuff (android) at
+          I love to explore technologies - currently VueJS, golang and DevOps - and document my findings.
+          I spend my time working on awesome mobile stuff (<span class="link" id="android">android</span>) at <span class="link" id="mm">Mutual Mobile</span>
           <br>
-          <span class="link" id="mm">Mutual Mobile</span>
-          <br>
-          Want to discuss interesting tech things, let's get in touch.
+          Wanna solve some interesting problems? Let's catch up.
         </p>
         <div class="social-flex">
 
