fix: gramatical mistakes

--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,15 @@
 
         <img class="image" src="assets/self_image.webp" alt="Self image">
         <p id="description" class="description" onload="populateDescription">
-          Yo! I am a software developer with keen interest in architecting applications and writing clean-ish code.
-          I like solving problems and drawing patterns on screen (<span id="skia" class="link">Skia</span> is &#x1F49B)
+          Yo! I am a software developer with a keen interest in architecting applications and writing clean-ish code.
+          I like solving problems and drawing patterns on the screen (<span id="skia" class="link">Skia</span> is
+          &#x1F49B)
           <br>
           I love to explore technologies - currently VueJS, golang and DevOps - and document my findings.
-          I spend my time working on awesome mobile stuff (<span class="link" id="android">android</span>) at <span class="link" id="mm">Mutual Mobile</span>
+          I spend my time working on awesome mobile stuff (<span class="link" id="android">android</span>) at <span
+            class="link" id="mm">Mutual Mobile</span>.
           <br>
-          Wanna solve some interesting problems? Let's catch up.
+          Want to solve some interesting problems? Let's catch up.
         </p>
         <div class="social-flex">
 
