remove call to populate description

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       <div class="content-flex">
 
         <img class="image" src="assets/self_image.webp" alt="Self image">
-        <p id="description" class="description" onload="populateDescription">
+        <p id="description" class="description">
           Yo! I am a software developer with a keen interest in architecting applications and writing clean-ish code.
           I like solving problems and drawing patterns on the screen (<span id="skia" class="link">Skia</span> is
           &#x1F49B)
