add: more data to variables. change intro

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
         <img class="image" src="assets/self_image.webp" alt="Self image">
         <p id="description" class="description">
-          Yo! I am a mobile application developer (Android) with more than 2 years worth of experience in prototyping, 
+          Hey there, I am a mobile application developer (Android) with more than 2 years worth of experience in prototyping, 
           developing and delivering highly performant and scalable applications. 
           <br>
           <br>
