start new design. add: dark theme toggle

--- a/public/index.html
+++ b/public/index.html
@@ -12,44 +12,22 @@
 </head>
 
 <body>
-  <div class="top-level-flex">
-    <div class="empty-flex"></div>
-    <div class="content-column">
-      <div class="empty-flex"></div>
-      <div class="content-flex">
 
-        <img class="image" src="assets/self_image.webp" alt="Self image">
-        <p id="description" class="description">
-          Hey there, I am a mobile application developer (Android) with more than 2 years worth of experience in prototyping, 
-          developing and delivering highly performant and scalable applications. 
-          <br>
-          <br>
-          I like solving problems and drawing patterns on the screen (<span id="skia" class="link">Skia</span> is
-          &#x1F49B)
-          <br>
-          I love to explore technologies - currently VueJS, golang and DevOps - and document my findings.
-          I spend my time working on awesome mobile stuff (<span class="link" id="android">android</span>) at <span
-            class="link" id="mm">Mutual Mobile</span>.
-          <br>
-          Want to solve some interesting problems? Let's catch up.
-        </p>
-        <div class="social-flex">
+  <!-- Theme toggle start -->
+  <div class="toggle">
+    <img id="toggle-img" src="assets/github.svg" />
+  </div>
+  <!-- Theme toggle end -->
 
-          <img id="twitter" class="social-icon" src="assets/twitter.svg" title="Twitter">
-          <img id="linkedin" class="social-icon" src="assets/linkedin.svg" title="LinkedIn">
-          <img id="github" class="social-icon" src="assets/github.svg" title="Github">
-          <img id="medium" class="social-icon" src="assets/medium.svg" title="Medium">
 
-        </div>
-      </div>
-      <div class="footnote-flex">
-        <p>Made with &#x1F49B by Saurabh Mishra</p>
-      </div>
+  <div id="intro-section">
 
-    </div>
-    <div class="empty-flex"></div>
+    <img id="my-image" class="self-image" src="assets/self_image.webp" />
+
+    <div id="intro-content"></div>
 
   </div>
+
 </body>
 
 </html>
