add: meta tags keywords and description

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description" content="Saurabh Mishra is a Software Engineer (Android) from Noida, India. He hold a bachelor's degree in Computer Science & Engineering. He likes to dig deep into complex problems and innovate unique solutions.">
+  <meta name="keywords" content="saurabh, mishra, saurabh mishra, saurabh-mishra, android, android dev, android developer, software developer, software engineer, android engineer">
+
   <title>Saurabh Mishra</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" media="screen" href="css/main.css">
