Add changes related to download resume button and some text changes

--- a/public/index.html
+++ b/public/index.html
@@ -24,18 +24,19 @@
 
         <img class="image" src="assets/self_image.webp" alt="Self image">
         <p id="description" class="description">
-          Hey there, I am a mobile application developer (Android) with more than 2 years worth of experience in prototyping, 
-          developing and delivering highly performant and scalable applications. 
+          Hello, I am a Software Engineer with 3 years of experience in 
+          prototyping, designing, developing and delivering 
+          highly performant, scalable testable, readable, robust and well-tested android applications.
           <br>
           <br>
-          I like solving problems and drawing patterns on the screen (<span id="skia" class="link">Skia</span> is
-          &#x1F49B)
+          I love to explore new technologies, solving puzzles and exploring the nature through treks.
           <br>
-          I love to explore technologies - currently VueJS, golang and DevOps - and document my findings.
-          I spend my time working on awesome mobile stuff (<span class="link" id="android">android</span>) at <span
+          <br>
+          I make my living by working on <span class="link" id="android">Android</span> at <span
             class="link" id="mm">Mutual Mobile</span>.
           <br>
-          Want to solve some interesting problems? Let's catch up.
+          <br>
+          Want to solve interesting problems? Let's catch up.
         </p>
         <div class="social-flex">
 
@@ -43,6 +44,7 @@
           <img id="linkedin" class="social-icon" src="assets/linkedin.svg" title="LinkedIn">
           <img id="github" class="social-icon" src="assets/github.svg" title="Github">
           <img id="medium" class="social-icon" src="assets/medium.svg" title="Medium">
+          <img id="resume" class="social-icon" src="assets/download.svg" title="Resume">
 
         </div>
       </div>
