add: sentence semantics change

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
           highly performant, scalable testable, readable, robust and well-tested android applications.
           <br>
           <br>
-          I love to explore new technologies, solving puzzles and exploring the nature through treks.
+          I love exploring new technologies, solving puzzles and exploring the nature through treks.
           <br>
           <br>
           I make my living by working on <span class="link" id="android">Android</span> at <span
